# rag-high-school-book

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.nginx  README.md  deployment.yaml  docker-compose.yml  main.py  pyproject.toml  start.sh
data/pages/grade_10_canh_dieu_dia_ly/: grade_10_canh_dieu_dia_ly_page_1.md  grade_10_canh_dieu_dia_ly_page_10.md  grade_10_canh_dieu_dia_ly_page_101.md  grade_10_canh_dieu_dia_ly_page_106.md  grade_10_canh_dieu_dia_ly_page_109.md  grade_10_canh_dieu_dia_ly_page_11.md  grade_10_canh_dieu_dia_ly_page_110.md  grade_10_canh_dieu_dia_ly_page_113.md  grade_10_canh_dieu_dia_ly_page_114.md  grade_10_canh_dieu_dia_ly_page_115.md  grade_10_canh_dieu_dia_ly_page_12.md  grade_10_canh_dieu_dia_ly_page_121.md  grade_10_canh_dieu_dia_ly_page_123.md  grade_10_canh_dieu_dia_ly_page_124.md  grade_10_canh_dieu_dia_ly_page_126.md  grade_10_canh_dieu_dia_ly_page_127.md  grade_10_canh_dieu_dia_ly_page_128.md  grade_10_canh_dieu_dia_ly_page_130.md  grade_10_canh_dieu_dia_ly_page_132.md  grade_10_canh_dieu_dia_ly_page_136.md  grade_10_canh_dieu_dia_ly_page_138.md  grade_10_canh_dieu_dia_ly_page_141.md  grade_10_canh_dieu_dia_ly_page_142.md  grade_10_canh_dieu_dia_ly_page_143.md  grade_10_canh_dieu_dia_ly_page_149.md  grade_10_canh_dieu_dia_ly_page_15.md  grade_10_canh_dieu_dia_ly_page_153.md  grade_10_canh_dieu_dia_ly_page_154.md  grade_10_canh_dieu_dia_ly_page_16.md  grade_10_canh_dieu_dia_ly_page_18.md  grade_10_canh_dieu_dia_ly_page_2.md  grade_10_canh_dieu_dia_ly_page_21.md  grade_10_canh_dieu_dia_ly_page_22.md  grade_10_canh_dieu_dia_ly_page_23.md  (+41 more)
nginx/: nginx.conf
src/: deploy_core.py  deploy_server.py  deploy_workflow.py  deployment.yml  main.py
src/config/: agents.yaml  config.yaml  data.yaml  llm.yaml  prompts.yaml  workflow.yaml
src/deploy/: deploy_server.py
src/notebooks/: deployment.ipynb  experimentation.ipynb
src/server/: server.py  wsgi.py
src/utils/: document.py  index.py
src/workflow/: agent.py
(+11914 files in other folders)
