[project]
name = "rag-book-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "flask>=3.0.0",
    "flask-pydantic>=0.13.1",
    "gunicorn>=23.0.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "llama-deploy>=0.8.1",
    "llama-index>=0.12.49",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-vector-stores-pinecone>=0.6.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint] 
select = ["E", "F", "W", "I"]
ignore = []
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
